# crustagent

./: .gitignore  Cargo.toml  NOTICE  README.md
assets/: README.md
crates/crustagent/: Cargo.toml
crates/crustagent-audio/: Cargo.toml
crates/crustagent-audio/src/: lib.rs  wav.rs
crates/crustagent-balloon/: Cargo.toml
crates/crustagent-balloon/src/: lib.rs
crates/crustagent-core/: Cargo.toml
crates/crustagent-core/examples/: act_gif.rs  gif.rs  sequence.rs
crates/crustagent-core/src/: balloon.rs  character.rs  idle.rs  lib.rs  motion.rs  player.rs  rng.rs  sequence.rs  text.rs
crates/crustagent-core/tests/: real_gesture.rs  real_idle.rs
crates/crustagent-format/: Cargo.toml
crates/crustagent-format/examples/: act_dump.rs  deriv2.rs  dump.rs  render.rs  sweep.rs
crates/crustagent-format/src/: acf.rs  acs.rs  acs_v15.rs  act.rs  blocks.rs  decode.rs  error.rs  lib.rs  model.rs  reader.rs
crates/crustagent-format/tests/: acs_synthetic.rs  act_real_files.rs  from_parts_rgba.rs  real_files.rs
crates/crustagent-gif/: Cargo.toml
crates/crustagent-gif/src/: lib.rs
crates/crustagent-render/: Cargo.toml
crates/crustagent-render/src/: main.rs  paint.rs  png.rs  present.rs
crates/crustagent-tts/: Cargo.toml
crates/crustagent-tts/src/: lib.rs
crates/crustagent/src/: lib.rs
crates/crustagent/tests/: drive.rs
