[workspace]
resolver = "2"
members = ["crates/crustagent-format", "crates/crustagent-core", "crates/crustagent-gif", "crates/crustagent-render", "crates/crustagent", "crates/crustagent-tts", "crates/crustagent-audio", "crates/crustagent-balloon"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/DarthBo/crustagent"
authors = ["crustagent contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
