[package]
name = "crustagent-audio"
description = "Sound-effect playback (rodio) for crustagent characters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
crustagent = { path = "../crustagent" }
rodio = "0.22"
