[package]
name = "crustagent-render"
description = "Windowed viewer that plays Microsoft Agent characters on screen"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crustagent-format = { path = "../crustagent-format" }
crustagent-core = { path = "../crustagent-core" }
winit = "0.30"
softbuffer = "0.4"
wgpu = "22"
pollster = "0.3"
