[package]
name = "crustagent-render"
description = "Windowed viewer that plays Microsoft Agent characters on screen"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crustagent = { path = "../crustagent" }
crustagent-format = { path = "../crustagent-format" }
crustagent-audio = { path = "../crustagent-audio" }
winit = "0.30"
wgpu = "22"
pollster = "0.3"
font8x8 = "0.3"
fontdue = "0.9.3"
fontdb = "0.23.0"
