[package]
name = "crustagent-render"
description = "Windowed viewer that plays Microsoft Agent characters on screen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
crustagent = { path = "../crustagent" }
crustagent-format = { path = "../crustagent-format" }
crustagent-audio = { path = "../crustagent-audio" }
crustagent-balloon = { path = "../crustagent-balloon" }
winit = "0.30"
wgpu = "30"
pollster = "1"
font8x8 = "0.3"
